--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
 		"dotenv": "^16.4.5",
 		"express": "^4.21.0",
 		"jsonwebtoken": "^9.0.2",
-		"mongodb": "^6.9.0"
+		"mongodb": "^6.9.0",
+		"morgan": "^1.10.0",
+		"radash": "^12.1.0"
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.2",
-    "@types/express": "^4.17.21",
+		"@types/express": "^4.17.21",
 		"@types/jsonwebtoken": "^9.0.7",
+		"@types/morgan": "^1.9.9",
 		"@types/node": "^22.7.4",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.6.2"
